--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="">
 <meta name="author" content="">
-<title>Fresca Farm Technology </title>
+<title>Fresca Farm Technology ®</title>
 <!--Bootstrap-->
 <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
 <!--Stylesheets-->
